--- a/src/components/Footer/Newsletter.css
+++ b/src/components/Footer/Newsletter.css
@@ -1,4 +1,5 @@
 .app__newsletter {
+  z-index: 2;
   padding: 2rem 4rem;
   border: 1px solid var(--color-golden);
   background: var(--color-black);
